namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  toolhive-system 
---
apiVersion: v1
kind: Namespace
metadata:
  name: lakera
