ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx 
  namespace: lakera 
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
 ingressClassName: nginx 
 rules:
  - host:   # juiceshop.lab 
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: guarddemo 
           port: 
             number: 3000
